# fractality

./: Cargo.toml  README.md  run_debug.sh
.github/workflows/: install_deps.yml  lints.yml  precompile.yml  precompile_binaries.yml
assets/shaders/: fractal.wgsl  texture.wgsl
src/: compositing.rs  fps_title.rs  fractal.rs  input.rs  lib.rs  main.rs  panic_hook.rs  ui.rs  utils.rs
src/fractal/: input.rs  material.rs  parameters.rs  render.rs
src/fractal/material/: shader_float.rs  shader_hot_reload.rs
src/fractal/render/: texture_material.rs
src/panic_hook/: format_backtrace.rs
src/ui/: complex_parameter.rs  num_input.rs  parameter.rs
