[package]
name = "fractality"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_window",
    "bevy_sprite",
    "bevy_winit",
    "bevy_image",
    "multi_threaded",
    "x11",
    "wayland",
] }
bevy_egui = "0.32.0"
wgpu = { version = "23.0.1", default-features = false, features = ["vulkan-portability"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
inherits = "release"
debug-assertions = true
overflow-checks = true
incremental = false

[profile.release]


[profile.hyperoptimize]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
incremental = false
