[package]
name = "fractality"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.74"
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_window",
    "bevy_sprite",
    "bevy_winit",
    "bevy_image",
    "multi_threaded",
    "x11",
    "wayland",
] }
bevy_egui = "0.32.0"
rfd = { version = "0.15.2", default-features = false, features = ["gtk3"] }
smallstr = { version = "0.3.0", features = ["std"] }
smallvec = { version = "1.13.2", features = ["const_generics"] }
wgpu = { version = "23.0.1", default-features = false, features = [
    "vulkan-portability",
] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
inherits = "release"
debug-assertions = true
overflow-checks = true
incremental = false

[profile.hyperoptimize]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
